--- a/connectors/index.html
+++ b/connectors/index.html
@@ -16,7 +16,7 @@
             <div class="text-center col-md-4 col-md-offset-4">
                 <div class="form-group">
                 </div>
-                <button type="button" id="submitButton" class="btn btn-success" style="margin: 10px;">Get My API Data!</button>
+                <button type="button" id="submitButton" class="btn btn-success" style="margin: 10px;">Get Farmer Data!</button>
             </div>
         </div>
     </div>
